doc/grammar.bnf
BAUPLAN := PREPROC_DECLARATIONS TEMPLATE
PREPROC_DECLARATIONS := PREPROC_DECLARATION PREPROC_DECLARATIONS
PREPROC_DECLARATION := '$$' IDENTIFIER PREPROC_VAL
                     | empty
PREPROC_VAL := PRIMITIVE_TYPE
             | empty
TYPE: COMPLEX_TYPE | PRIMITIVE_TYPE
COMPLEX_TYPE := TEMPLATE | SECTION | VARIABLE | CODE | INSTRUCTION
PRIMITIVE_TYPE := NUMERIC_TYPE | STRING | BOOLEAN
NUMERIC_TYPE := INTEGER | DOUBLE
TEMPLATE := "*" TYPEDEF_WITH_BODY
SECTION := "@" TYPEDEF_WITH_BODY
CODE := "&" TYPEDEF_WITH_BODY
INSTRUCTION := "#" TYPEDEF_WITH_BODY
VARIABLE := "$" TYPEDEF_NO_BODY
TYPEDEF_WITH_BODY := "(" IDENTIFIER DIRECTIVE_BLOCK BODY ")"
BODY := TYPE BODY
       | empty
TYPEDEF_NO_BODY := "(" IDENTIFIER DIRECTIVE_BLOCK ")"
DIRECTIVE_BLOCK := "{" DIRECTIVE_LIST "}"
                 | empty
DIRECTIVE_LIST := DIRECTIVE_KEYPART DIRECTIVE_VALPART DIRECTIVE_LIST_REST
                | empty
DIRECTIVE_LIST_REST := "|" DIRECTIVE_LIST
                     | empty
DIRECTIVE_KEYPART := IDENTIFIER
DIRECTIVE_VALPART := ":" DIRECTIVE_VAL_LIST
                   | empty
DIRECTIVE_VAL_LIST := TYPE DIRECTIVE_VAL_REST
DIRECTIVE_VAL_REST := "," DIRECTIVE_VAL_LIST
                    | empty
INTEGER := # integer
DOUBLE := # double
BOOLEAN := "true" | "false"
STRING := QUOTED_STRING | LITERAL | BAREWORD
QUOTED_STRING := '"' #anything '"'
LITERAL := "<<<" anything ">>>"
BAREWORD := # anything else
IDENTIFIER := /^[$A-Z_][0-9A_Z_$]*$/i
COMMENT := BLOCK_COMMENT | INLINE_COMMENT
BLOCK_COMMENT := ";;(" anything ";;)"
INLINE_COMMENT := ";;" anything
